// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Matches snapshot 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-xxvp4g-1 cNcSUx"
  >
    <div>
      <div
        class="CartCount__Dot-xxvp4g-0 bntGuW count"
      >
        11
      </div>
    </div>
  </span>
</div>
`;

exports[`Renders updates via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-xxvp4g-1 cNcSUx"
  >
    <div>
      <div
        class="CartCount__Dot-xxvp4g-0 bntGuW count count-enter-done"
      >
        12
      </div>
    </div>
  </span>
</div>
`;
